--- a/edunio/package.json
+++ b/edunio/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
